<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.scijava</groupId>
        <artifactId>pom-scijava</artifactId>
        <version>37.0.0</version>
        <relativePath />
    </parent>

    <groupId>imagejai</groupId>
    <artifactId>imagej-ai</artifactId>
    <version>0.2.0</version>
    <packaging>jar</packaging>

    <name>ImageJ AI Assistant</name>
    <description>AI-powered assistant for ImageJ/Fiji. Natural language control of image analysis.</description>

    <properties>
        <package-name>imagejai</package-name>
        <license.licenseName>bsd_2</license.licenseName>
        <license.copyrightOwners>Jamie</license.copyrightOwners>
        <!-- Keep plugin classes Java 8 so Fiji's bundled Zulu 8 can load them.
             Java 11+ terminal classes are isolated and lazy-loaded by reflection. -->
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.release>8</maven.compiler.release>
        <scijava.jvm.build.version>[8,)</scijava.jvm.build.version>
        <!-- Override scijava's enforcer to allow building with newer JDKs -->
        <enforcer.skip>true</enforcer.skip>
        <!-- pty4j / JediTerm resolve Kotlin 2.x transitive artifacts. Keep this
             explicit so SciJava's older BOM does not pull a mismatched stdlib. -->
        <kotlin.version>2.1.21</kotlin.version>
        <!-- SciJava still manages kotlin-stdlib-common, which Kotlin 2.x no
             longer publishes as a jar. Keep that retired compatibility artifact
             on SciJava's original line while the terminal deps use Kotlin 2.x. -->
        <kotlin-stdlib-common.version>1.9.22</kotlin-stdlib-common.version>
    </properties>

    <repositories>
        <repository>
            <id>jetbrains-intellij-dependencies</id>
            <url>https://packages.jetbrains.team/maven/p/ij/intellij-dependencies</url>
        </repository>
        <repository>
            <id>scijava.public</id>
            <url>https://maven.scijava.org/content/groups/public</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- ImageJ2 / SciJava (provided by Fiji at runtime) -->
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>imagej</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>ij</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.scijava</groupId>
            <artifactId>scijava-common</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Gson (provided by Fiji at runtime — ships as jars/gson-2.10.1.jar) -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Embedded terminal backend (stage 05) -->
        <dependency>
            <groupId>org.jetbrains.pty4j</groupId>
            <artifactId>pty4j</artifactId>
            <version>0.13.12</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.jediterm</groupId>
            <artifactId>jediterm-core</artifactId>
            <version>3.66</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.jediterm</groupId>
            <artifactId>jediterm-ui</artifactId>
            <version>3.66</version>
            <scope>compile</scope>
        </dependency>

        <!-- SnakeYAML for ProviderRegistry (Phase D). SafeConstructor only —
             see risk #16 in docs/multi_provider/07_implementation_plan.md §4. -->
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.2</version>
            <scope>compile</scope>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>agent/providers</directory>
                <targetPath>agent/providers</targetPath>
                <includes>
                    <include>proxy.py</include>
                    <include>litellm.config.yaml</include>
                    <include>requirements.txt</include>
                    <include>models.yaml</include>
                    <include>ollama_model_sizes.json</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                    <release>8</release>
                </configuration>
            </plugin>
            <!-- Generate SciJava plugin annotation index -->
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <packageName>imagejai</packageName>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer" />
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
